# patchouly

./: .gitignore  Cargo.toml  README.md
.github/workflows/: book-pages.yml  ci.yml
book/: .gitignore  Makefile  book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  intro.md
book/src/ch1/: answer_lang_consts.rs  answer_lang_tail.rs
book/tests/: Cargo.toml
crates/patchouly-build/: Cargo.toml  README.md
crates/patchouly-build/src/: extract.rs  generate.rs  lib.rs  structs.rs
crates/patchouly-core/: Cargo.toml
crates/patchouly-core/src/: lib.rs  relocation.rs  stencils.rs
crates/patchouly-macros/: Cargo.toml
crates/patchouly-macros/src/: lib.rs  perm.rs  setup.rs  stencil.rs
crates/stencil-macros/: Cargo.toml
crates/stencil-macros/src/: lib.rs  stencil.rs
crates/stencils/: Cargo.toml
crates/stencils-bin/: Cargo.toml  build.rs
crates/stencils-bin/src/: main.rs
crates/stencils/src/: lib.rs
examples/: README.md
examples/bf/: Cargo.toml  build.rs
examples/bf-stencils/: Cargo.toml
examples/bf-stencils/src/: lib.rs
examples/bf/src/: main.rs
examples/calc/: Cargo.toml  build.rs
examples/calc-stencils/: Cargo.toml
examples/calc-stencils-bin/: Cargo.toml  build.rs
examples/calc-stencils-bin/src/: main.rs
examples/calc-stencils/src/: lib.rs
examples/calc/src/: main.rs
examples/commons/: Cargo.toml
examples/commons/src/: lib.rs
src/: alloc.rs  lib.rs  managed.rs  patch.rs  regs.rs
