[package]
name = "patchouly"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/patchouly-macros",

    "examples/calc-stencils",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
patchouly-macros = { version = "0.1.0", path = "crates/patchouly-macros" }
example-calc-stencils = { path = "examples/calc" }

### Common
itertools = "0.14.0"
once_cell = "1.21.4"
smallvec = "1.15.1"

### Stencil generation
# Macros
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
# Object file parsing
ar = "0.9.0"
object = "0.37.3"
# JIT
memmap2 = "0.9.8"

[dependencies]
