[package]
name = "patchouly"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/patchouly-core",
    "crates/patchouly-build",
    "crates/patchouly-macros",

    "examples/bf",
    "examples/bf-stencils",
    "examples/calc",
    "examples/calc-stencils",
    "examples/commons",

    "book/tests",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
patchouly = { path = "." }
patchouly-core = { path = "crates/patchouly-core" }
patchouly-build = { path = "crates/patchouly-build" }
patchouly-macros = { path = "crates/patchouly-macros" }

example-bf = { path = "examples/bf" }
example-bf-stencils = { path = "examples/bf-stencils" }
example-calc = { path = "examples/calc" }
example-calc-stencils = { path = "examples/calc-stencils" }
example-commons = { path = "examples/commons" }
book-tests = { path = "book/tests" }

### Common
bitfields = "1.0.3"
itertools = "0.14.0"
once_cell = "1.21.4"
slab = "0.4.12"
smallvec = "1.15.1"
thiserror = "2"

### Stencil generation
# Macros
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
# Object file parsing
ar = "0.9.0"
object = "0.37.3"
# JIT
memmap2 = "0.9.8"

### Tests
pretty_assertions = "1.4.1"

[dependencies]
patchouly-core.workspace = true

memmap2.workspace = true
slab.workspace = true
smallvec.workspace = true
thiserror.workspace = true
