[package]
name = "patchouly"
description = "A copy-and-patch JIT framework in Rust"
version = "0.1.0"
edition.workspace = true

authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "./README.md",
]

[workspace]
members = [
    "crates/patchouly-core",
    "crates/patchouly-build",
    "crates/patchouly-macros",

    "examples/bf",
    "examples/bf-stencils",
    "examples/calc",
    "examples/calc-stencils",
    "examples/commons",

    "book/tests",
]

[workspace.package]
edition = "2024"
authors = ["gudzpoz <gudzpoz@live.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gudzpoz/patchouly"
repository = "https://github.com/gudzpoz/patchouly"
keywords = ["jit", "compile", "compiler", "copy-and-patch"]

[workspace.dependencies]
patchouly = { path = "." }
patchouly-core = { path = "crates/patchouly-core", version = "0.1.0" }
patchouly-build = { path = "crates/patchouly-build" }
patchouly-macros = { path = "crates/patchouly-macros" }

example-bf = { path = "examples/bf" }
example-bf-stencils = { path = "examples/bf-stencils" }
example-calc = { path = "examples/calc" }
example-calc-stencils = { path = "examples/calc-stencils" }
example-commons = { path = "examples/commons" }
book-tests = { path = "book/tests" }

### Common
bitfields = "1.0.3"
itertools = "0.14.0"
once_cell = "1.21.4"
slab = "0.4.12"
smallvec = "1.15.1"
thiserror = "2"

### Stencil generation
# Macros
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
# Object file parsing
ar = "0.9.0"
object = "0.37.3"
rustc-demangle = "0.1"
# JIT
memmap2 = "0.9.8"

### Tests
pretty_assertions = "1.4.1"

[features]
default = ["std"]
std = ["dep:memmap2"]

[dependencies]
patchouly-core.workspace = true

memmap2 = { workspace = true, optional = true }
slab.workspace = true
smallvec.workspace = true
thiserror.workspace = true
