[package]
name = "patchouly-build"
description = "Utility to extract and generate ready-to-use patchouly stencils."
version = "0.1.0"
edition.workspace = true

license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
patchouly-core.workspace = true

ar.workspace = true
memmap2.workspace = true
object.workspace = true
rustc-demangle.workspace = true
smallvec.workspace = true
