[package]
name = "patchouly-macros"
description = "Proc macros for patchouly stencil generation."
version = "0.1.0"
edition.workspace = true

license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling.workspace = true
itertools.workspace = true
once_cell.workspace = true
proc-macro2.workspace = true
quote.workspace = true
smallvec.workspace = true
syn = { workspace = true, features = ["parsing"] }

[dev-dependencies]
patchouly-core.workspace = true
pretty_assertions.workspace = true
prettyplease = { version = "0.2.37", features = ["verbatim"] }
